vac-rs/crates/surfaces/tui/src/bottom_pane/snapshots/vac_tui__bottom_pane__chat_composer__tests__slash_popup_mo.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 7424
expression: terminal.backend()
---
"                                                            "
"› /mo                                                       "
"                                                            "
"  /model  choose what model and reasoning effort to use     "
"          partial / vac.identity                            "
